# volatility-lens-web

./: .gitignore  BIAS_CHECKLIST.md  LICENSE  MASTER_PROMPT.md  Makefile  README.md  vercel.json
.github/workflows/: ci.yml  e2e.yml  pipeline.yml
docs/: architecture.md  deployment.md  runbook.md
docs/decisions/: 0001-nextjs-app-router.md  0002-vercel-as-target.md  0003-artifact-driven-vs-live-api.md  0004-3d-surface-r3f-vs-plotly.md  0005-regime-model-hmm.md  0006-svi-parameterization.md  0007-schema-codegen-pydantic-to-zod.md  (+1 more)
pipeline/: README.md  pyproject.toml
pipeline/configs/: default.yaml  dev.secret  full.yaml  smoke.yaml
pipeline/src/vlens/: __init__.py  cli.py
pipeline/src/vlens/config/: __init__.py  loader.py  schema.py
pipeline/src/vlens/data/: __init__.py  schemas.py  synthetic.py
pipeline/src/vlens/publish/: __init__.py  artifacts.py  jsonschema_export.py  manifest.py  upload_vercel.py
pipeline/src/vlens/regime/: __init__.py  changepoint.py  hmm.py  labels.py
pipeline/src/vlens/skew/: __init__.py  metrics.py  series.py
pipeline/src/vlens/surface/: __init__.py  grid.py  interpolate.py  svi.py
pipeline/src/vlens/utils/: __init__.py  hashing.py  io.py  logging.py  seeding.py
pipeline/tests/: conftest.py
pipeline/tests/integration/: test_smoke_publish.py
pipeline/tests/property/: test_no_lookahead.py  test_svi_invariants.py
pipeline/tests/unit/: test_config.py  test_hashing.py  test_regime.py  test_schemas.py  test_skew.py  test_svi.py
web/: .gitignore  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+27 files in other folders)
