[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlens"
version = "0.1.0"
description = "Volatility & Regime Lens — research pipeline for the public website."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "volatility-lens contributors" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "structlog>=24.1",
    "hmmlearn>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]
real-data = [
    "yfinance>=0.2",
    "polars>=0.20",
    "pandas>=2.2",
]

[project.scripts]
vlens = "vlens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vlens = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:hmmlearn.*",
]

[tool.coverage.run]
branch = true
source = ["vlens"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
